# NarrativeOS

./: .env.example  .gitignore  .mcp.json  AGENTS.md  API_CONTRACT.md  MEMBER_01_SENSORY.md  MEMBER_02_COGNITIVE.md  MEMBER_03_PLATFORM.md  README.md  TEAM_DIVISION.md  agent.config.json  agent.py  demo.sh  payload.py  pyproject.toml  render.yaml  vercel.json
.github/workflows/: ci.yml
.well-known/: agent-card.json
agents/: .gitignore  Dockerfile  __main__.py  llm.py  models.py  narrative_intelligence.py  requirements.txt  schemas.py  sentiment.py
agents/backtest/: events.py  runner.py
agents/consensus/: aggregator.py
agents/debate/: engine.py
agents/execution_api/: app.py
agents/graph/: workflow.py
agents/market_correlation/: app.py
agents/narrativeos_agents.egg-info/: SOURCES.txt  requires.txt
agents/prompts/: templates.py
agents/registry/: agent.json  agent_cards.py
agents/risk_intelligence/: app.py
agents/strategy_agent/: app.py
agents/tests/: conftest.py  test_execution_api.py  test_market_correlation.py  test_pipeline_integration.py  test_risk_intelligence.py  test_strategy_agent.py  test_visualization_agent.py
agents/tools/: __init__.py  price_lookup.py  sec_lookup.py  web_search.py
agents/visualization_agent/: app.py
agents/webhooks/: server.py
data/: README.md  config.py  requirements.txt
data/mcp/: README.md  client.py
data/pipelines/: entity_extractor.py  normalize.py  (+2 more)
graphify-out/: .graphify_root  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
narrativeos_agents.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+66 files in other folders)
